k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: notes-deployment
#  namespace: dev

spec:
  replicas: 1
  selector:
    matchLabels:
      app: notes
  template:
    metadata:
      labels:
        app: notes
    spec:
      containers:
      - name: django-notes-app
        imagePullPolicy: IfNotPresent
        image: ujjwalpratap/django-notes-app
        ports:
        - containerPort: 8000
