k8s/service.yml
apiVersion: v1
kind: Service

metadata:
  name: notes-service
  namespace: dev

spec:
  selector:
    app: notes
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
