k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: project-routing
  namespace: dev

spec:
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: my-service
            port:
              number: 80

      - path: /notes
        pathType: Prefix
        backend:
          service:
            name: notes-service
            port:
              number: 8000
